manifests/fulcio-2.3.20.tgz-manifest.yaml
---
# Source: fulcio/charts/ctlog/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctlog-system
---
# Source: fulcio/charts/ctlog/templates/ctlog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    helm.sh/chart: ctlog-0.2.53
    app.kubernetes.io/name: ctlog
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.6.17"
    app.kubernetes.io/managed-by: Helm
  name: ctlog
  namespace: ctlog-system
spec:
  ports:
    - name: 6962-tcp
      port: 80
      protocol: TCP
      targetPort: 6962
    - name: 6963-tcp
      port: 6963
      protocol: TCP
      targetPort: 6963
  selector:
    app.kubernetes.io/name: ctlog
    app.kubernetes.io/instance: my-release
  type: "ClusterIP"
---
# Source: fulcio/templates/fulcio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    helm.sh/chart: fulcio-2.3.20
    app.kubernetes.io/name: fulcio
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.4.5"
    app.kubernetes.io/managed-by: Helm
  name: my-release-fulcio-server
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5555
    - name: grpc
      port: 5554
      protocol: TCP
      targetPort: 5554
    - name: 2112-tcp
      port: 2112
      protocol: TCP
      targetPort: 2112
  selector:
    app.kubernetes.io/name: fulcio
    app.kubernetes.io/instance: my-release
  type: "ClusterIP"
---
# Source: fulcio/charts/ctlog/templates/ctlog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctlog
  namespace: ctlog-system
  labels:
    helm.sh/chart: ctlog-0.2.53
    app.kubernetes.io/name: ctlog
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.6.17"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ctlog
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/config: 2a8d8eaf8eda4e290285309cbb0aea0412ac0c23f73bdd11c2b3aa43f3ef7258
        prometheus.io/path: /metrics
        prometheus.io/port: "6963"
        prometheus.io/scrape: "true"
      labels:
        helm.sh/chart: ctlog-0.2.53
        app.kubernetes.io/name: ctlog
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.6.17"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: ctlog
      containers:
        - name: ctlog
          image: "ghcr.io/sigstore/scaffolding/ct_server@sha256:e16f0a2be43a317a4c392cca24eec8c8fef06b0e836bc3545979ac0335fcf6f5"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--http_endpoint=0.0.0.0:6962"
            - "--metrics_endpoint=0.0.0.0:6963"
            - "--log_config=/ctfe-keys/config"
            - "--alsologtostderr"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 6962
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 6962
            initialDelaySeconds: 10
          volumeMounts:
            - name: keys
              mountPath: "/ctfe-keys"
              readOnly: true
          ports:            
            - containerPort: 6962
              protocol: TCP
            - containerPort: 6963
              protocol: TCP
      securityContext:
        runAsNonRoot: true
        runAsUser: 65533
      volumes:
        - name: keys
          secret:
            secretName: ctlog-secret
---
# Source: fulcio/templates/fulcio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-fulcio-server
  namespace: default
  labels:
    helm.sh/chart: fulcio-2.3.20
    app.kubernetes.io/name: fulcio
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.4.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fulcio
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/config: 8e1a9f063a2a8e7f5a36999d069bb6907b17d15d6585c2931009d68c987f9c29
      labels:
        app.kubernetes.io/name: fulcio
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-fulcio-server
      # This doesn't actually use Kubernetes credentials, so don't mount them in.
      automountServiceAccountToken: true
      containers:
        - name: my-release-fulcio-server
          image: "gcr.io/projectsigstore/fulcio@sha256:003d38b43442d436fe645feaebf8784975c138e411cf232276bea9de2a9f7b58"
          imagePullPolicy: "IfNotPresent"
          ports:            
            - containerPort: 5555
              protocol: TCP
            - containerPort: 5554
              protocol: TCP
            - containerPort: 2112
              protocol: TCP
          args:
            - "serve"
            - "--port=5555"
            - "--grpc-port=5554"
            - "--ca=fileca"
            - "--fileca-key"
            - "/var/run/fulcio-secrets/key.pem"
            - "--fileca-cert"
            - "/var/run/fulcio-secrets/cert.pem"
            - "--fileca-key-passwd"
            - "$(PASSWORD)"
            - "--ct-log-url=http://ctlog.ctlog-system.svc/fulcio"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 5555
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 5555
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: fulcio-config
              mountPath: /etc/fulcio-config
            - name: oidc-info
              mountPath: /var/run/fulcio
            - name: fulcio-cert
              mountPath: "/var/run/fulcio-secrets"
              readOnly: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 65533
      volumes:
        - name: fulcio-config
          configMap:
            name: my-release-fulcio-server-config
        - name: oidc-info
          projected:
            sources:
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
                      mode: 0666
        - name: fulcio-cert
          secret:
            secretName: fulcio-server-secret
            items:
              - key: private
                path: key.pem
              - key: cert
                path: cert.pem
---
# Source: fulcio/templates/fulcio-http-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  labels:
    helm.sh/chart: fulcio-2.3.20
    app.kubernetes.io/name: fulcio
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.4.5"
    app.kubernetes.io/managed-by: Helm
  name: my-release-fulcio-server-http
  namespace: default
  annotations:
    {}
spec:
  ingressClassName: nginx
  rules:
    - host: "fulcio.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-fulcio-server
                port:
                  number: 80
